objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>B2B Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Catalogue Requested</fullName>
        </values>
        <values>
            <fullName>Considering</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Reviewing</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>B2C Leads</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Catalogue Requested</fullName>
        </values>
        <values>
            <fullName>Considering</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Reviewing</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign2</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8</booleanFilter>
            <filterItems>
                <field>Campaign.Name</field>
                <operation>equals</operation>
                <value>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</value>
            </filterItems>
            <filterItems>
                <field>Campaign.Name</field>
                <operation>equals</operation>
                <value>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</value>
            </filterItems>
            <filterItems>
                <field>Campaign.Name</field>
                <operation>equals</operation>
                <value>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</value>
            </filterItems>
            <filterItems>
                <field>Campaign.Name</field>
                <operation>equals</operation>
                <value>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</value>
            </filterItems>
            <filterItems>
                <field>Campaign.Name</field>
                <operation>equals</operation>
                <value>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</value>
            </filterItems>
            <filterItems>
                <field>Campaign.Name</field>
                <operation>equals</operation>
                <value>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</value>
            </filterItems>
            <filterItems>
                <field>Campaign.Name</field>
                <operation>equals</operation>
                <value>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</value>
            </filterItems>
            <filterItems>
                <field>Campaign.Name</field>
                <operation>equals</operation>
                <value>XXXXXXXXXXXXXXXXXxxx</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (Campaign)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
            <filterItems>
                <field>Campaign.Name</field>
                <operation>equals</operation>
                <value>Partner_Column_WLA_BMCTechnologyConferenceCalifornia_Q2,All_Partner_RightstarCallConnect_USFederal_FY16,Partner_Column_WLA_BMCTechnologyConferenceAustin_Q2,FY17Partner_Matrix_BMCDayIsrael_PlAll_June7_2016,FY17Partner_BMCEngageSponsorship_PLAll,Partner_Eve</value>
            </filterItems>
            <filterItems>
                <field>Campaign.Name</field>
                <operation>equals</operation>
                <value>Partner_ITSM_LeadGen&amp;MarketingActivities_FY17,WLA_LeadGenCampaign_Partners:_SouthEMEA_OCT15,WLA_LeadGenCampaign_Partners_ NorthEMEA_OCT15,WLA_LeadGenPilot_OpportunityID_Partner_Fusion,Partner_DCA_LeadGen&amp;MarketingActivities_FY17,Partner_Fusion_WLA_Content</value>
            </filterItems>
            <filterItems>
                <field>Campaign.Name</field>
                <operation>equals</operation>
                <value>Partner_P&amp;A_LeadGen&amp;MarketingActivities_FY17,Partner_P&amp;A_LeadGen&amp;MarketingActivities_FY17,Partner_RjR_FY17Q1_AppSettingCampaign_Canada,Partner_WLA_LeadGen&amp;MarketingActivities_FY17,WLA_LeadGenPilot_OpportunityID_Partner_Cetan,Partner_SHI_xPL_Meet&amp;Greets_Q2</value>
            </filterItems>
            <filterItems>
                <field>Campaign.Name</field>
                <operation>equals</operation>
                <value>FY17_XPL_PGDealReg_Partners_XAPJ_May23_2016,Partner_Fusion_DiscoverOrgSubscription_FY17,Partner_Fusion_DSM_ContentSyndication_UK_Q2,Partner_Fusion_WLA_ContentSyndication_UK_Q2,FY17Partner_BMCDayTorontoSponsorship_PLAll,Partner_Devoteam_DSM_ContentSynd_Q2</value>
            </filterItems>
            <filterItems>
                <field>Campaign.Name</field>
                <operation>equals</operation>
                <value>FY17Partner_Flycast_WLA_AppSettingCampaign,Partner_Compsec_FY17_AppSettingCampaign_Q2,Partner_Materna_Germany_DSM_ContentSynd_Q2,WLA_LeadGenCampaign_Partners_Federal_OCT15,Partner_Materna_Sweden_DSM_ContentSynd_Q2,FY17Partner_BMCDayNYCSponsorship_PLAll</value>
            </filterItems>
            <filterItems>
                <field>Campaign.Name</field>
                <operation>equals</operation>
                <value>AWLA_LeadGenCampaign_Partners_NAEast_OCT15,WLA_LeadGenCampaign_Partners_NAEast_OCT15,WLA_Partner_ABMGoodMorningCampaign_Column,Partner_Materna_DSM_BrightTalkWebinar_Q2,Partner_Rightstar_CallConnect_LeadGen_Q2,Partner_RjR_DiscoverOrgSubscription_FY17</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Activity__c</fullName>
        <label>Client Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentUser_Manager__c</fullName>
        <formula>IF( Owner:User.ManagerId = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser$Manager</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exam_Date__c</fullName>
        <label>Exam Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_ID_18_characters__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead ID 18 characters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOT_MAPPED__c</fullName>
        <label>NOT MAPPED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Number_Lead__c</fullName>
        <label>Opp Number Lead</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <description>This field is used to represent the interest the lead as shown in our products.</description>
        <inlineHelpText>Choose the product the lead is most likely to buy.</inlineHelpText>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tower System</fullName>
                </value>
                <value>
                    <fullName>Individual Parts</fullName>
                </value>
                <value>
                    <fullName>Monitors</fullName>
                </value>
                <value>
                    <fullName>Complete Desktop System</fullName>
                </value>
                <value>
                    <fullName>Home Entertainment</fullName>
                </value>
                <value>
                    <fullName>Consoles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_category__c</fullName>
        <label>Product category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EPAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Used to define the location of the lead.</description>
        <inlineHelpText>Used to define the location of the lead.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAME__c</fullName>
        <label>SAME</label>
        <length>47</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Lead_source_formula__c</fullName>
        <formula>TEXT(LeadSource)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Lead source formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_multi__c</fullName>
        <label>Test multi</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tradeshow_presence1__c</fullName>
        <label>Tradeshow presence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hola</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tradeshow_presence__c</fullName>
        <description>es como lead source</description>
        <label>Tradeshow presence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hola</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_field__c</fullName>
        <defaultValue>&quot;http://www.dgsfp.mineco.es/regpublicos/pui/pui.aspx&quot;</defaultValue>
        <label>URL field</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unqualifying_Reason__c</fullName>
        <label>Unqualifying Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invalid Company</fullName>
                </value>
                <value>
                    <fullName>Invalid Name</fullName>
                </value>
                <value>
                    <fullName>Invalid Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_de_Custom_object2__c</fullName>
        <formula>IF( ISPICKVAL( numero__c , &quot;2&quot;) , XYZ_Custom__r.Valor1__c ,
IF( ISPICKVAL( numero__c , &quot;1&quot;) , XYZ_Custom__r.Valor2__c ,
null))</formula>
        <label>Valor de Custom object2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valor_de_Custom_object__c</fullName>
        <formula>IF( ISPICKVAL(  numero__c  , &quot;2&quot;) ,  XYZ_Custom__r.Valor1__c , 
IF( ISPICKVAL( numero__c , &quot;1&quot;) , XYZ_Custom__r.Valor2__c ,
null))</formula>
        <label>Valor de Custom object</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Expiration__c</fullName>
        <label>Warranty Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XYZ_Custom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XYZ Custom</label>
        <referenceTo>XYZ_Custom__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>auto_number_leads__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>auto number leads</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>eduardo_formula__c</fullName>
        <formula>AND(  (LEN(&quot;Arturo2&quot;) &gt; 8) ,OR ( CONTAINS(&quot;Arturo2&quot;, &quot;1&quot;), CONTAINS(&quot;Arturo2&quot;, &quot;2&quot;), CONTAINS(&quot;Arturo2&quot;, &quot;3&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>eduardo formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mapping__c</fullName>
        <formula>Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>mapping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mayor__c</fullName>
        <label>mayor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>menor_o_igual__c</fullName>
        <label>menor o igual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>numero__c</fullName>
        <label>numero</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>outbound__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>outbound</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>other phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>phone_test__c</fullName>
        <label>phone test</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>qualification__c</fullName>
        <label>qualification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>test_name_import__c</fullName>
        <label>test name import</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_web_to_lead__c</fullName>
        <label>test web to lead</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>test_winter_picklist__c</fullName>
        <label>test winter picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>testlead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>testlead</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>US_LEADS</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>US LEADS</label>
        <language>en_US</language>
        <queue>US</queue>
    </listViews>
    <recordTypes>
        <fullName>Lead_Record_Type</fullName>
        <active>true</active>
        <businessProcess>B2C Leads</businessProcess>
        <label>Lead Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Record_Type2</fullName>
        <active>true</active>
        <businessProcess>B2B Lead Process</businessProcess>
        <label>Lead Record Type2</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Unqualified_Leads</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL ( Status , &quot;Unqualified&quot;)</errorConditionFormula>
        <errorMessage>Error message for &quot;Unqualified_Leads&quot; validation rule on leads.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>is_converted</fullName>
        <active>false</active>
        <errorConditionFormula>AND (IsConverted,   SAME__c =&quot;A&quot;)</errorConditionFormula>
        <errorMessage>Validation rule evitando que conviertas</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>owner_lead_no_edit</fullName>
        <active>false</active>
        <errorConditionFormula>OR
($Profile.Id = &quot;00eD00000015dkn&quot; &amp;&amp; ISCHANGED( OwnerId ),
$Profile.Id = &quot;00eD00000015dkT&quot; &amp;&amp; ISCHANGED( OwnerId ))</errorConditionFormula>
        <errorMessage>the owner cannot be changed</errorMessage>
    </validationRules>
</CustomObject>